[gd_scene load_steps=2 format=3 uid="uid://dt0fhn02p7ukk"]

[ext_resource type="Script" uid="uid://by0asx0ka1c2b" path="res://ui/settings_menu/content_items/content_item_dropdown.gd" id="1_2q2x0"]

[node name="ContentItemDropdown" type="Control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
script = ExtResource("1_2q2x0")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingsContentPanelInactive"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"SettingsContentLabel"
text = "label"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 35)
layout_mode = 2
theme_type_variation = &"SettingsContentPanelRight"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(256, 35)
layout_mode = 1
offset_right = 256.0
offset_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1
text_overrun_behavior = 4
clip_text = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_on_option_button_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_on_option_button_focus_exited"]
